# parasl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  spec.md
frontend/: class.h  field.h  function.h  inst.h  layer.h  program.h  types.h
ir/: CMakeLists.txt  class.h  field.h  function.cpp  function.h  inst.cpp  inst.h  layer.h  main.cpp  opcodes.h  program.h  types.h  vreg.cpp  vreg.h
ir/tests/: CMakeLists.txt  irbuilder_test.cpp  irbuilder_test2.cpp
lexer/: CMakeLists.txt  Token.h  lexer.h  lexer.l
parser/: CMakeLists.txt  driver.cpp  driver.h  parser.y
parser/ast/: ASTNode.h  ArrayInitNode.h  AssignmentNode.h  BinaryOpNode.h  CompoundStatementNode.h  DeclarationNode.h  ExpressionNode.h  ForStatementNode.h  FunctionCallNode.h  FunctionDefNode.h  IDNode.h  IfStatementNode.h  LayerNode.h  LiteralNode.h  ObjectAccessNode.h  ReturnStatementNode.h  StatementNode.h  TypeNode.h  TypeNodes.h  WhileStatementNode.h
runtime/: CMakeLists.txt  frame.h  runtime.h  runtime_handlers.cpp  types.h
runtime/tests/: CMakeLists.txt  runtime_test1.cpp
test/: example.pcl  syntax0.pcl  syntax1.pcl  syntax2.pcl  syntax3.pcl
utils/: CMakeLists.txt  debug.cpp  debug.h  macros.h
